@startuml

title __ENTITIES's Class Diagram__\n

  package  {
    package engine.entities {
      abstract class Character {
          {static} + DEFAULT_MOVEMENT_SPEED : float
          {static} # MAX_HEALTH : float
          - heavyAttackRange : int
          # health : float
          # playerAngle : Rotate
          # isShielded : boolean
          # movementSpeed : float
          # isAlive : boolean
          # damagePowerup : boolean
          # iframes : int
          # damageMultiplier : float
          # timerArray : long[]
          # actionHasSounded : boolean
          # verticalMove : float
          # horizontalMove : float
          # lightAttackRange : double
          - currentActionStart : long
          + moveUp()
          + moveDown()
          + moveLeft()
          + moveRight()
          + moveUpCartesian()
          + moveDownCartestian()
          + moveLeftCartesian()
          + moveRightCartesian()
          + lightAttack()
          - resetActionTimer()
          + removeHealth()
          + takeDamage()
          + chargeHeavyAttack()
          - heavyAttack()
          + shield()
          + unShield()
          + changeToFire()
          + changeToWater()
          + changeToEarth()
          + changeToAir()
          + getPlayerAngle()
          + setPlayerAngle()
          + setLocation()
          + getMovementSpeed()
          + getHealth()
          + getCurrentElement()
          + isShielded()
          + getMAX_HEALTH()
          + isAlive()
          + respawn()
          + addHealth()
          + speedBoost()
          + damageBoost()
          + activeDamagePowerup()
          + getCurrentAction()
          + setCurrentAction()
          + getCurrentActionStart()
          + toString()
          + getDamageMultiplier()
          + getAttackHitbox()
          + getHeavyAttackHitbox()
          + hasActionSounded()
          + setActionHasSounded()
          - checkCD()
          + getIframes()
          + setHorizontalMove()
          + setVerticalMove()
          + getLastAttacker()
          + getVerticalMove()
          + getHorizontalMove()
      }
    }
  }
  

  package  {
    package engine.entities {
      class CooldownValues {
          {static} ~ speedBoostID : int
          {static} ~ speedBoostDuration : int
          {static} ~ lightAttackID : int
          {static} ~ lightAttackCD : float
          {static} ~ heavyAttackID : int
          {static} ~ heavyAttackCD : float
          {static} ~ changeStateID : int
          {static} ~ changeStateCD : float
          {static} ~ damageBoostID : int
          {static} ~ damageBoostDur : float
      }
    }
  }
  

  package  {
    package engine.entities {
      abstract class PhysicsObject {
          # width : int
          # height : int
          # location : Point2D
          {abstract} + update()
          + getLocation()
          + getWidth()
          + getBounds()
          + getTag()
          + getHeight()
      }
    }
  }
  

  package  {
    package engine.entities {
      class Player {
          {static} - nextId : int
          - id : int
          + Player()
          + Player()
          + update()
          + setLocation()
          + toString()
          + getId()
          + setId()
      }
    }
  }
  

  package  {
    package engine.entities {
      class PowerUp {
          {static} - nextId : int
          - id : int
          - isActive : boolean
          + PowerUp()
          + PowerUp()
          + getId()
          + getLocation()
          + setLocation()
          + activatePowerUp()
          + getType()
          + update()
          + getBounds()
      }
    }
  }
  

  package  {
    package engine.entities {
      class Wall {
          - Wall()
          + Wall()
          + Wall()
          + update()
      }
    }
  }
  

  Character -up-|> PhysicsObject
  Character o-- Elements : currentElement
  Character o-- Action : currentAction
  Character o-- Player : lastAttacker
  PhysicsObject o-- ObjectType : tag
  Player -up-|> Character
  PowerUp -up-|> PhysicsObject
  PowerUp o-- PowerUpType : type
  Wall -up-|> PhysicsObject


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
